# easyHomework

./: CMakeLists.txt  main  main.cpp  main.py
templates/: error.html  upload.html
textAnalysis/: CMakeLists.txt  textAnalysis.cpp
